Dark mode added, css in report.php fixed

--- a/pages/reports/report.css
+++ b/pages/reports/report.css
@@ -1,3 +1,46 @@
 body {
-	background-color: blue;
+	color: #eeeeee;
+	background-color: #292929;
+}
+
+.container {
+	display: flex;
+	padding: 10px;
+	align-content: center;
+	justify-content: space-around;
+}
+
+table {
+	border-color: #eeeeee;
+	border-style: outset;
+	border-width: 1px;
+/*	flex: 1;*/
+}
+
+thead {
+	text-align: center;
+	background-color: #333;
+} 
+
+tbody > tr > td {
+	text-align: center;
+	border-right-style: outset;
+	border-right-color: #eeeeee;
+	border-right-width: 1px;
+}
+tbody > tr > td:last-child{border: 0;}
+
+.button {
+	color: #eeeeee;
+	background-color: #333;
+	border-color: #eeeeee;
+	border-width: 1px;
+	width: 100%;
+}
+
+.input-text {
+	color: #eeeeee;
+	background-color: #333;
+	border-color: #eeeeee;
+	border-width: 1px;
 }
